# rust-actix-graphql-sqlx-postgresql

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md
gateway/: .editorconfig  .eslintignore  .eslintrc  .gitattributes  .gitignore  package-lock.json  package.json  server.ts  tsconfig.json
scripts/docker/: init-db.sh
svc-coder/: .env  Cargo.toml
svc-coder/migrations/: 20210209111257_coder.sql  20210209112257_coder.sql
svc-coder/src/: main.rs  model.rs
svc-skill/: .env  Cargo.toml
svc-skill/migrations/: 20210209222256_skill.sql
svc-skill/src/: main.rs  model.rs
